# apps

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTIONS.md  README.md  after.yaml  before-basic.yaml  before.yaml  catalog.json  check_health.go  copy_lib.sh  cspell.config.yaml  custom_app_migration.py  devbox.json  docker-compose.yaml  features_capability.json  go.mod  go.sum  main.py  out.txt  out.yaml  pyproject.toml  requirements.txt  run_actual_budget.py  scri.sh  test-compose.py  todo.md  zz.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md  renovate-config.js
.github/ISSUE_TEMPLATE/: app-request.yaml  bug-report.yaml  enhancement-request.yaml
.github/PULL_REQUEST_TEMPLATE/: app_addition.md  new-app.md
.github/scripts/: changed_apps.py  ci.py  ci.sh  generate_metadata.py  message.py  port_validation.py  renovate_bump.sh  selinux-ci.py
.github/workflows/: app-test-suite.yaml  check-deltabadger-updates.yml  dev_apps_validate.yml  install-docker.yaml  library-tests.yaml  manual_update_catalog.yaml  python-lint.yaml  renovate.yaml  slack-discussion-notification.yml  tag-docs-team.yaml  update_catalog.yaml
app/: docker-compose.yaml
example/syncthing/: payload.json
go-tools/: go.mod  go.sum
macros/: permissions.py.jinja  permissions.yaml.jinja  perms.sh.jinja  test.sh.jinja
macros/perms/: script.sh.jinja  (+1 more)
migration_helpers/: resources.py  storage.py
nc-old/: same-vol.out
templates/: container_networks.yaml  networks.yaml  ports.yaml  resources.yaml  storage.yaml
(+27268 files in other folders)
