[project]
name = "truenas-apps"
version = "0.1.0"
description = "TrueNAS Apps Catalog"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pyyaml",
    "psutil",
    "pytest",
    "pytest-cov",
    "bcrypt",
    "pydantic",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
